ham_dark_scroll

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-dark>
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +8,11 @@
     <script src="https://kit.fontawesome.com/d80affeeab.js" crossorigin="anonymous"></script>
     <title>scroll Button</title>
 </head>
-<body>
+<body data-dark>
     <header>
         <h1 >Scroll Button</h1>
-        <button class="btn hamburger hamburger--collapse" type="button">
-            <span class="hamburger-box">
+        <button  class="btn hamburger hamburger--collapse" type="button">
+            <span  class="hamburger-box">
               <span class="hamburger-inner"></span>
             </span>
         </button>
@@ -47,6 +47,10 @@
         <h2>Seccion 5</h2>
     </section>
 
+    <button id="dark-light-btn" class="button-x">
+        <i class="fas fa-moon"></i>
+    </button>
+   <!--  <button id="night" class="btn"></button> -->
 <script src="js/index.js" type = "module"></script>
 </body>
 </html>
