Simple Night Theme

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles/style.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/d80affeeab.js" crossorigin="anonymous"></script>
-    <title>scroll Button</title>
+    <title>Night Theme</title>
 </head>
 <body data-dark>
     <header>
-        <h1 >Scroll Button</h1>
+        <h1 >Night Theme</h1>
         <button  class="btn hamburger hamburger--collapse" type="button">
             <span  class="hamburger-box">
               <span class="hamburger-inner"></span>
